# pyrallel-change-kata

./: README.md  pyproject.toml
src/pyrallel_change_kata/: field.py
tests/: tests.py
